RESOLVED FIXED83410
m_shouldRespectImageOrientation is used uninitialized
https://bugs.webkit.org/show_bug.cgi?id=83410
Summary m_shouldRespectImageOrientation is used uninitialized
James Simonsen
Reported 2012-04-06 16:25:44 PDT
m_shouldRespectImageOrientation is used uninitialized
Attachments
Patch (1.26 KB, patch)
2012-04-06 16:26 PDT, James Simonsen
no flags
James Simonsen
Comment 1 2012-04-06 16:26:02 PDT
James Simonsen
Comment 2 2012-04-06 16:26:50 PDT
The new setting is the uninitialized value.
Tim Horton
Comment 3 2012-04-06 16:42:04 PDT
Note You need to log in before you can comment on or make changes to this bug.