m_shouldRespectImageOrientation is used uninitialized https://bugs.webkit.org/show_bug.cgi?id=83410

Reviewed by Simon Fraser.

Initialize Settings's m_shouldRespectImageOrientation to false.

* page/Settings.cpp:
(WebCore::Settings::Settings):


Canonical link: https://commits.webkit.org/100843@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113519 268f45cc-cd09-0410-ab3c-d52691b4dbfc